respond to review code nits